--- a/app/globals.css
+++ b/app/globals.css
@@ -174,6 +174,10 @@ select:-webkit-autofill:focus {
         background-color: transparent;
     }
 }
+
+.css-t3ipsp-control:hover{
+  border: none!important;
+}
 @media(max-width: 992px){
   .selectBox{
     flex-direction: column;
